--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6" style="margin-top: 75px;">
-                    <img src="assets/images/designer.svg" style="width: 100%;overflow: hidden;">
+                    <img src="assets/designer.svg" style="width: 100%;overflow: hidden;">
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
         <h3 class="sec-title p-3 rounded-pill shadow" id="contact">Contact</h3>
         <div class="row mt-5">
             <div class="col-lg-6">
-                <img src="assets/images/contact.svg" style="width: 100%;">
+                <img src="assets/contact.svg" style="width: 100%;">
             </div>
             <div class="col-lg-6">
                 <form method="post" id="contact_form" action="https://kgk-backend.herokuapp.com/contact" target="_blank" class="p-5 shadow rounded-3">
