--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <img src="assets/contact.svg" style="width: 100%;">
             </div>
             <div class="col-lg-6">
-                <form method="post" id="contact_form" action="https://kgk-backend.herokuapp.com/contact" target="_blank" class="p-5 shadow rounded-3">
+                <form method="post" id="contact_form" action="https://formspree.io/f/mqknvjjw" target="_blank" class="p-5 shadow rounded-3">
                     <h4 class="mb-3" style="color: rgb(117,201,43);">Message me</h4>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" placeholder="." name="name" required>
