--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row">
                 <div class="col-lg-6" style="margin-top: 125px;">
                     <h1 class="home-header">I'm<br>Puvvadi Kavya.</h1>
-                    <p class="mt-5 home-text">Computer Science Undergraduate, Web Designer</p>
+                    <p class="mt-5 home-text">Associate Software Engineer, at Infor</p>
                     <div class="mt-5">
                         <a class="home-btn shadow rounded-pill p-3" href="#contact">CONTACT ME</a>
                     </div>
@@ -60,9 +60,8 @@
                 <div class="p-5">
                     <h4 style="color: rgb(117,201,43);">Who am I?</h4>
                     <hr>
-                    <p>I am Puvvadi Kavya. You can simply call me Kavya. I'm a Computer Science undergraduate currently pursuing B.Tech in Computer Science and Engineering at Sri Venkateswara University College Of Engineering, Tirupati.</p>
-                    <p>I love to design and develop things.</p>
-                    <p>Personally, I love to watch thriller and sci-fi movies.</p>
+                    <p>I am a passionate Software Engineer currently contributing my expertise at Infor in Hyderabad.Specializing in Java and frameworks like Spring Boot ,Spring rest, Spring Data JPA, RestFul API's, Spring Security, Docker, Microservices I bring strong foundation in backend development.With a keen eye for database management, I excel in mySQL and Microsoft SQL Server. Experienced in building and consuming API's. I am open to new opportunities and connections that allow me to contribute to innovatve projects and further my professional growth.</p>
+                    
                 </div>
             </div>
             <div class="col-lg-2"></div>
@@ -107,23 +106,32 @@
                 <i class="fa-brands fa-python langs-known-item"></i>
             </div>
             <div class="col">
+                <i class="fa-brands fa-java script langs-known-item"></i>
+            </div>
+            <div class="col">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
+                    <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.33333,5.33333)"><path d="M43.982,23.635c0.069,-4.261 -0.891,-9.328 -2.891,-15.273l-1.568,-4.662l-2.13,4.433c-0.114,0.237 -0.244,0.469 -0.38,0.698c-3.499,-3.004 -8.039,-4.831 -13.013,-4.831c-11.046,0 -20,8.954 -20,20c0,11.046 8.954,20 20,20c11.046,0 20,-8.954 20,-20c0,-0.123 -0.016,-0.242 -0.018,-0.365z" fill="#161615"></path><path d="M39.385,32.558c-3.123,4.302 -8.651,4.533 -13.854,4.442h-6.781h-1.938c4.428,-1.593 7.063,-1.972 9.754,-3.4c5.068,-2.665 10.078,-8.496 11.121,-14.562c-1.93,5.836 -7.779,10.85 -13.109,12.889c-3.652,1.393 -10.248,2.745 -10.248,2.745l-0.267,-0.145c-4.49,-2.259 -4.626,-12.313 3.537,-15.559c3.574,-1.423 6.993,-0.641 10.854,-1.593c4.122,-1.012 8.89,-4.208 10.83,-8.375c2.172,6.667 4.786,17.106 0.101,23.558zM15.668,38.445c-0.282,0.35 -0.713,0.555 -1.163,0.555c-0.823,0 -1.495,-0.677 -1.495,-1.5c0,-0.823 0.677,-1.5 1.495,-1.5c0.341,0 0.677,0.118 0.941,0.336c0.64,0.519 0.74,1.469 0.222,2.109z" fill="#ffffff"></path></g></g>
+                    </svg>
+            </div>
+            <div class="col">
+                <i class="fa-solid fa-database langs-known-item"></i>
+            </div>  
+            <div class="col">
+                <i class="fa-brands fa-js langs-known-item"></i>
+            </div>
+               
+            <div class="col">
                 <i class="fa-brands fa-html5 langs-known-item"></i>
             </div>
             <div class="col">
                 <i class="fa-brands fa-css3 langs-known-item"></i>
             </div>
             <div class="col">
-                <i class="fa-brands fa-java script langs-known-item"></i>
-            </div>
-            <div class="col">
-                <i class="fa-solid fa-c langs-known-item"></i>
-            </div>
+                <i class="fa-brands fa-docker langs-known-item"></i>
+            </div>  
         </div>
     </div>
-    <!--<div class="container mt-5">
-        <h3 class="sec-title p-3 rounded-pill shadow" id="portfolio">Portfolio</h3>
-        <div style="min-height: 1000px;"></div>
-    </div>-->
+  
     <div class="container mt-5">
         <h3 class="sec-title p-3 rounded-pill shadow" id="contact">Contact</h3>
         <div class="row mt-5">
