--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6" style="margin-top: 75px;">
-                    <img src="assets/designer.svg" style="width: 100%;overflow: hidden;">
+                    <img src="assets/profile.jpg" style="width: 100%;overflow: hidden;">
                 </div>
             </div>
         </div>
